--- a/build.gradle
+++ b/build.gradle
@@ -6,5 +6,6 @@ repositories {
 
 dependencies {
     compile 'io.swagger:swagger-parser:1.0.19'
+    compile 'commons-beanutils:commons-beanutils:1.8.3'
     testCompile 'junit:junit:4.12'
 }
